<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/Profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
    <item
        android:id="@+id/Donation_history"
        android:icon="@drawable/ic_trending_up"
        android:title="@string/donation_history" />
    <item
        android:id="@+id/Blogs"
        android:icon="@drawable/ic_book"
        android:title="@string/blogs" />
    <item
        android:id="@+id/Survey_updatee"
        android:icon="@drawable/ic_searching_magnifying_glass"
        android:title="@string/survey_updates" />
</menu>